feature: 开发网关注销用户接口传入 Token