@@ -29,9 +29,10 @@ import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * SpringCloud Gateway Token 拦截器
@@ -44,6 +45,11 @@ public class TokenValidateGatewayFilterFactory extends AbstractGatewayFilterFact
     public TokenValidateGatewayFilterFactory() {
         super(Config.class);
     }
+
+    /**
+     * 注销用户时需要传递 Token
+     */
+    public static final String DELETION_PATH = "/api/user-service/deletion";
 
     @Override
     public GatewayFilter apply(Config config) {
@@ -62,10 +68,9 @@ public class TokenValidateGatewayFilterFactory extends AbstractGatewayFilterFact
                 ServerHttpRequest.Builder builder = exchange.getRequest().mutate().headers(httpHeaders -> {
                     httpHeaders.set(UserConstant.USER_ID_KEY, userInfo.getUserId());
                     httpHeaders.set(UserConstant.USER_NAME_KEY, userInfo.getUsername());
-                    try {
-                        httpHeaders.set(UserConstant.REAL_NAME_KEY, URLEncoder.encode(userInfo.getRealName(), "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {
-                        throw new RuntimeException(e);
+                    httpHeaders.set(UserConstant.REAL_NAME_KEY, URLEncoder.encode(userInfo.getRealName(), StandardCharsets.UTF_8));
+                    if (Objects.equals(requestPath, DELETION_PATH)) {
+                        httpHeaders.set(UserConstant.USER_TOKEN_KEY, token);
                     }
                 });
                 return chain.filter(exchange.mutate().request(builder.build()).build());
